# elemental-chat

./: shell.nix
zomes/chat/: Cargo.toml
