[package]
name = "elemental-chat"
version = "0.0.1-alpha5"
authors = [ "michael.dougherty@holo.host", "philip.beadle@holo.host", "david.meister@holo.host, tom.gowan@holo.host" ]
edition = "2018"

[lib]
name = "chat"
crate-type = [ "cdylib", "rlib" ]

[dependencies]

hdk3 = { git = "https://github.com/holochain/holochain.git", rev = "bc1e9b98cc30a0dac8bf8d9a3eee5cc3c5e4e218" }
serde = "=1.0.104"
chrono = { version = "0.4", features = ['alloc', 'std']}
derive_more = "0.99.9"
thiserror = "1.0.20"
